--- a/livres.html
+++ b/livres.html
@@ -5617,20 +5617,23 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Confessions-dun-h%C3%A9t%C3%A9rosexuel-l%C3%A9g%C3%A8rement-d%C3%A9pass%C3%A9/dp/2226478388/ref=sr_1_1?keywords=frederic+beigbeder&qid=1681505225&sprefix=beig%2Caps%2C116&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71Vg5UwhGJL.jpg" alt="Beigbeder" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Frédéric Beigbeder
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Confessions d'un hétérosexuel
       </figcaption>
       <figcaption>
-        23,56€
+        légèrement dépassé
       </figcaption>
-    </figure>-->
+      <figcaption>
+        19,90€
+      </figcaption>
+    </figure>
 
     <!--Livre 100
     <figure>
