--- a/livres.html
+++ b/livres.html
@@ -5617,7 +5617,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Confessions-dun-h%C3%A9t%C3%A9rosexuel-l%C3%A9g%C3%A8rement-d%C3%A9pass%C3%A9/dp/2226478388/ref=sr_1_1?keywords=frederic+beigbeder&qid=1681505225&sprefix=beig%2Caps%2C116&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71Vg5UwhGJL.jpg" alt="Beigbeder" class="books" /></a>
@@ -5633,7 +5633,7 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100
     <figure>
