--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 28 mars 2023
+    Mise à jour liste le 25 avril 2023
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 22 juillet 2022
