--- a/livres.html
+++ b/livres.html
@@ -5617,23 +5617,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Confessions-dun-h%C3%A9t%C3%A9rosexuel-l%C3%A9g%C3%A8rement-d%C3%A9pass%C3%A9/dp/2226478388/ref=sr_1_1?keywords=frederic+beigbeder&qid=1681505225&sprefix=beig%2Caps%2C116&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/71Vg5UwhGJL.jpg" alt="Beigbeder" class="books" /></a>
+      <a href="https://www.amazon.fr/Laffaire-du-Golden-State-Killer/dp/2264079789/ref=sr_1_1?keywords=william+thorp+-+l%27affaire+du+golden+state+killer&qid=1682423679&sprefix=william+th%2Caps%2C93&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61BZc0rpBLL.jpg" alt="L'affaire du Golden State Killer" class="books" /></a>
       <figcaption>
-        Frédéric Beigbeder
+        William Thorp
       </figcaption>
       <figcaption>
-        Confessions d'un hétérosexuel
+        L'affaire du Golden State Killer
       </figcaption>
       <figcaption>
-        légèrement dépassé
+        7,50€
       </figcaption>
-      <figcaption>
-        19,90€
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
