--- a/autres.html
+++ b/autres.html
@@ -33,7 +33,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 2-->
+    <!--Autres 2
     <figure>
       <a href="https://shop.gotaga.tv/accessoires/60-tumbler-list.html" target="_blank"> <img
           src="https://shop.gotaga.tv/763-large_default/tumbler-list.jpg" alt="Tumblr Gotaga" class="others" /></a>
@@ -43,19 +43,19 @@
       <figcaption>
         20,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Autres 3-->
+    <!--Autres 3
     <figure>
       <a href="https://shop.gotaga.tv/accessoires/58-notebook-gotaga.html"
-        target="_blank"> <img src="https://shop.gotaga.tv/754-large_default/notebook-gotaga.jpg" alt="Sleeve Fnatic" class="others" /></a>
+        target="_blank"> <img src="https://shop.gotaga.tv/754-large_default/notebook-gotaga.jpg" alt="Gotaga" class="others" /></a>
       <figcaption>
         Carnet Gotaga
       </figcaption>
       <figcaption>
         15,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 4
     <figure>
