--- a/livres.html
+++ b/livres.html
@@ -5632,20 +5632,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-lavocat-Christine-Villemin-Thierry/dp/2490543032/ref=sr_1_7?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=169T8EYUCHUTZ&keywords=paroles+d%27avocats&qid=1684319296&sprefix=paroles+d%27avocats%2Caps%2C84&sr=8-7" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/91+CQ4KHFnL.jpg" alt="Parole d'avocat" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Thierry Moser
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Parole d'avocat
       </figcaption>
       <figcaption>
-        35,00€
+        23,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
