ajout livres Saviano

--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://www.amazon.fr/BALIBETOV-Conteneur-Yerba-Mate-Yerbero/dp/B08TGYFN69/ref=d_bmx_dp_g8f6etoo_sccl_3_2/257-0666022-3977509?pd_rd_w=5qW0k&content-id=amzn1.sym.451ebedf-757d-4f53-9e19-67aee92e9c6d&pf_rd_p=451ebedf-757d-4f53-9e19-67aee92e9c6d&pf_rd_r=96TT8QANM7B59KCW43FH&pd_rd_wg=T2mFt&pd_rd_r=9a08d725-fa62-4881-a74a-5928b569180b&pd_rd_i=B08TGYFN69&psc=1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/61Pwyyqx46L._AC_SL1390_.jpg" alt="Récipient à Mate" class="others" /></a>
@@ -31,7 +31,7 @@
       <figcaption>
         20,49€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 2
     <figure>
