--- a/livres.html
+++ b/livres.html
@@ -32,7 +32,7 @@
         La Société du Spectacle
       </figcaption>
       <figcaption>
-        7,20€
+        7,50€
       </figcaption>
     </figure>
 
@@ -47,7 +47,7 @@
         Flic
       </figcaption>
       <figcaption>
-        17,90€
+        Rupture de stock
       </figcaption>
     </figure>
 
@@ -131,7 +131,7 @@
         Un Singulier Garçon
       </figcaption>
       <figcaption>
-        25,73€
+        24,00€
       </figcaption>
     </figure>
 
@@ -5836,37 +5836,37 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Extra-pure-Voyage-l%C3%A9conomie-coca%C3%AFne/dp/2070140490/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1EXC3JY0KRCGF&keywords=roberto+saviano&qid=1686340413&sprefix=roberto+saviano%2Caps%2C74&sr=8-3" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81RNyGiqw5L.jpg" alt="Extra pure: Voyage dans l'économie de la cocaïne" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Roberto Saviano
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Extra pure
       </figcaption>
       <figcaption>
-        35,00€
+        21,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/suis-toujours-vivant-Asaf-Hanuka/dp/2075096961/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/719UscW02qL.jpg" alt="Je suis toujours vivant" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Roberto Saviano
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Je suis toujours vivant
       </figcaption>
       <figcaption>
-        17,90€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98
     <figure>
