--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -24,23 +24,35 @@
 
     <!--Jeu 1
     <figure>
-      <a href="https://www.amazon.fr/HOGWARTS-LEGACY-LH%C3%89RITAGE-POUDLARD-Playstation/dp/B0BBVR5C16/ref=sr_1_2?crid=2TP52DC3FWS9Q&keywords=hogwarts+legacy+ps5&qid=1674915502&sprefix=hogwarts%2Caps%2C82&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/71Sr8Gw9iLL._AC_SL1500_.jpg" alt="Hogwarts" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/en/e/e9/F1_Manager_2023_cover_art.jpg" alt="F1 Manager" class="game" /></a>
       <figcaption>
-        Hogwarts Legacy
+        F1 Manager 2023
       </figcaption>
       <figcaption>
-        Rupturee de Stock
+        65,00€
+      </figcaption>
+      <figcaption>
+        Sortie le 31 juillet 2023
+      </figcaption>
+      <figcaption>
+        Achat sur PC
       </figcaption>
     </figure>-->
 
     <!--Jeu 2
     <figure>
-      <a href="https://www.amazon.fr/Dead-Space-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0BGPLL3D6/ref=sr_1_1?crid=8UTI5NGAYN8J&keywords=dead+space+remake+ps5&qid=1674915549&sprefix=dead%2Caps%2C86&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/714hHWpIP4L._AC_SL1500_.jpg" alt="Dead Space" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://images.g2a.com/1024x768/1x1x0/the-binding-of-isaac-rebirth-complete-bundle-repentence-dlc-pc-steam-gift-europe-i10000235499007/758da73c53d645eca0595767" alt="Isaac" class="game" /></a>
       <figcaption>
-        Dead Space
+        The Binding of Isaac
       </figcaption>
       <figcaption>
-        69,99€
+        The Complete Bundle
+      </figcaption>
+      <figcaption>
+        48,46€
+      </figcaption>
+      <figcaption>
+        Achat sur PC
       </figcaption>
     </figure>-->
 
