--- a/livres.html
+++ b/livres.html
@@ -5868,20 +5868,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Chanson-neige-silencieuse-Hubert-Selby/dp/282360524X/ref=sr_1_7?keywords=hubert+selby+jr&qid=1686417201&sprefix=selby%2Caps%2C99&sr=8-7"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61dNL8trx5L.jpg" alt="Chanson de la neige silencieuse" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Hubert Selby Jr.
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Chanson de la neige silencieuse
       </figcaption>
       <figcaption>
-        19,90€
+        13,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
