--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
       <a href="#" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/en/e/e9/F1_Manager_2023_cover_art.jpg" alt="F1 Manager" class="game" /></a>
       <figcaption>
@@ -37,9 +37,9 @@
       <figcaption>
         Achat sur PC
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
       <a href="#" target="_blank"> <img src="https://images.g2a.com/1024x768/1x1x0/the-binding-of-isaac-rebirth-complete-bundle-repentence-dlc-pc-steam-gift-europe-i10000235499007/758da73c53d645eca0595767" alt="Isaac" class="game" /></a>
       <figcaption>
@@ -54,7 +54,7 @@
       <figcaption>
         Achat sur PC
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 3
     <figure>
