--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -56,17 +56,17 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 3
+    <!--Jeu 3-->
     <figure>
-      <a href="https://www.amazon.fr/Nintendo-1014265-Mario-Kart-Deluxe/dp/B01N1081RO/ref=pd_sim_63_10?_encoding=UTF8&pd_rd_i=B01N1081RO&pd_rd_r=0628726c-cc8b-4a47-8bf6-850d5c0d241c&pd_rd_w=G1Xo9&pd_rd_wg=Ecbfq&pf_rd_p=79de6a4a-b21a-4694-99e3-cde9267231ac&pf_rd_r=NEV47M1RK88HJGD04JFG&psc=1&refRID=NEV47M1RK88HJGD04JFG"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91BphPXVYVL._SL1500_.jpg" alt="Mario Kart" class="game" /></a>
+      <a href="https://www.amazon.fr/FINAL-FANTASY-XVI-Deluxe-PS5/dp/B0BPM1MNPM/ref=sr_1_1?crid=SLH3VB0HCVW0&keywords=final%2Bfantasy%2B16&qid=1686847568&sprefix=final%2Bfantasy%2B16%2Caps%2C79&sr=8-1&th=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81b-xYJXUfL._AC_SL1500_.jpg" alt="Final Fantasy XVI" class="game" /></a>
       <figcaption>
-        Mario Kart 8 Deluxe
+        Final Fantasy XVI
       </figcaption>
       <figcaption>
-        49,99€ sur Amazon
+        71,99€ sur Amazon
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 4
     <figure>
