--- a/livres.html
+++ b/livres.html
@@ -5883,52 +5883,55 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/CASES-MAGISTRAT-ENQU%C3%8ATE-Jacques-Dallest/dp/237254277X/ref=sr_1_1?keywords=cold+cases&qid=1686847723&sprefix=cold+cases%2Caps%2C83&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61FTztEBNhL.jpg" alt="COLD CASES UN MAGISTRAT ENQUÊTE" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Jacques Dallest
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Cold Cases :
       </figcaption>
       <figcaption>
-        23,56€
+        Un Magistrat enquête
       </figcaption>
-    </figure>-->
+      <figcaption>
+        22,00€
+      </figcaption>
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Laffaire-Alice-Crimmins-Ana%C3%AFs-Renevier/dp/2264079797/ref=sr_1_1?keywords=anais+renevier&qid=1686847732&sprefix=anais+rene%2Caps%2C77&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71u0hbm4WYL.jpg" alt="L'affaire Alice Crimmins" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Anaïs Renevier
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        L'affaire Alice Crimmins
       </figcaption>
       <figcaption>
-        35,00€
+        7,50€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Linconnu-Cleveland-Thibault-Raisse/dp/2264079800/ref=sr_1_1?keywords=l%27inconnu+de+cleveland&qid=1686847748&sprefix=l%27inconnu+de+cle%2Caps%2C77&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71sRISo4CfL.jpg" alt="L'inconnu de Cleveland" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Thibault Raisse
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        L'inconnu de Cleveland
       </figcaption>
       <figcaption>
-        17,90€
+        7,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98
     <figure>
