--- a/livres.html
+++ b/livres.html
@@ -5933,35 +5933,38 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Criminels-Philippe-FOLCO/dp/2355842736/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3TGHDB3MZ3341&keywords=philippe+di+folco&qid=1688572004&sprefix=philippe+di+folco%2Caps%2C89&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61A8cBGnnFL._SL1255_.jpg" alt="Criminels" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Philippe Di Folco
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Criminels
       </figcaption>
       <figcaption>
-        19,90€
+        22,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Dictionnaire-amoureux-divers-Didier-DECOIN/dp/2259212069/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1688404719&sr=8-2" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61K6rhR56CL.jpg" alt="Dictionnaire amoureux des Faits divers" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Didier Decoin
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Dictionnaire amoureux
       </figcaption>
       <figcaption>
-        23,56€
+        des Faits divers
       </figcaption>
-    </figure>-->
+      <figcaption>
+        24,00€
+      </figcaption>
+    </figure>
 
     <!--Livre 100
     <figure>
