--- a/livres.html
+++ b/livres.html
@@ -5966,52 +5966,52 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/beaux-lendemains-Russell-Banks/dp/2742714448/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1QC9W92KI2MLU&keywords=russell+banks+de+beaux+lendemains&qid=1689710385&sprefix=russell+banks+de+beaux+lendemains%2Caps%2C78&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/41IOvbbmG0L.jpg" alt="De beaux lendemains" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Russell Banks
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        De beaux lendemains
       </figcaption>
       <figcaption>
-        35,00€
+        9,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Sous-ciel-fa%C3%AFence-R%C3%A9cit-habitants/dp/2226474889/ref=sr_1_1?crid=1Z1VY935M7DUQ&keywords=sous+un+ciel+de+faience&qid=1689710529&sprefix=sous+un+cie%2Caps%2C76&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/31Bi7F6pt8L.jpg" alt="Sous un ciel de faïence" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Céline Laurens
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Sous un ciel de faïence
       </figcaption>
       <figcaption>
-        17,90€
+        20,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Tropique-du-Cancer-Henry-Miller/dp/2072998190/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=17L6RQ6ORJ6HA&keywords=tropique+du+cancer&qid=1689710648&sprefix=tropique+dy+cabcer%2Caps%2C70&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61k5gpuQiEL._SL1500_.jpg" alt="Tropique du Cancer" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Henry Miller
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Tropique du Cancer
       </figcaption>
       <figcaption>
-        19,90€
+        10,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 99
     <figure>
