--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -56,7 +56,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 3-->
+    <!--Jeu 3
     <figure>
       <a href="https://www.amazon.fr/FINAL-FANTASY-XVI-Deluxe-PS5/dp/B0BPM1MNPM/ref=sr_1_1?crid=SLH3VB0HCVW0&keywords=final%2Bfantasy%2B16&qid=1686847568&sprefix=final%2Bfantasy%2B16%2Caps%2C79&sr=8-1&th=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81b-xYJXUfL._AC_SL1500_.jpg" alt="Final Fantasy XVI" class="game" /></a>
@@ -66,7 +66,7 @@
       <figcaption>
         71,99€ sur Amazon
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 4
     <figure>
