--- a/livres.html
+++ b/livres.html
@@ -5454,7 +5454,7 @@
         Jordan B. Peterson
       </figcaption>
       <figcaption>
-        12 nouvelles règles pour une vie au-delà de l'ordre
+        12 nouvelles règles pour une
       </figcaption>
       <figcaption>
         vie au-delà de l'ordre
@@ -5658,7 +5658,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Moins-z%C3%A9ro-Bret-Easton-ELLIS/dp/2264010959/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1685453794&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81o0+wLReaL.jpg" alt="Moins que zéro" class="books" /></a>
@@ -5674,7 +5674,7 @@
       <figcaption>
         17,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -5685,9 +5685,6 @@
       </figcaption>
       <figcaption>
         Suite(s) impériale(s)
-      </figcaption>
-      <figcaption>
-        Livre 2 de 2
       </figcaption>
       <figcaption>
         7,50€
