--- a/autres.html
+++ b/autres.html
@@ -45,7 +45,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 3-->
+    <!--Autres 3
     <figure>
       <a href="https://www.amazon.fr/PlayStation-officielle-DualSense-rechargeable-Compatible/dp/B08H99BPJN/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1VKMYHEBJCR9E&keywords=manette+ps5&qid=1686572285&sprefix=man%2Cette+ps5%2Caps%2C76&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/51+ojGZU0FL._AC_SL1500_.jpg" alt="Gotaga" class="others" /></a>
@@ -55,7 +55,7 @@
       <figcaption>
         64,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 4
     <figure>
