--- a/livres.html
+++ b/livres.html
@@ -5308,9 +5308,6 @@
       <figcaption>
         24,00€
       </figcaption>
-      <figcaption>
-        Sortie le 13 octobre
-      </figcaption>
     </figure>
 
     <!--Livre 100-->
@@ -6007,20 +6004,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Mon-p%C3%A8re-en-doute-encore/dp/229024029X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1691075170&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71nlaRBjwVL.jpg" alt="Mon père en doute encore" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Saphia Azzeddine
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Mon père en doute encore
       </figcaption>
       <figcaption>
-        23,56€
+        7,20€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
