--- a/livres.html
+++ b/livres.html
@@ -6036,20 +6036,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/OLIGARQUES-CHINOIS-Ockrent-christine/dp/B0B2Z7V9VN/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1LN2ZHXEF2VO7&keywords=ockrent&qid=1692018208&sprefix=ockren%2Caps%2C115&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/6180v+iKcoL.jpg" alt="L'Empereur et les milliardaires rouges" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Christine Ockrent
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        L'Empereur et les milliardaires rouges
       </figcaption>
       <figcaption>
-        17,90€
+        22,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98
     <figure>
