--- a/livres.html
+++ b/livres.html
@@ -4892,8 +4892,8 @@
   <div class="booksLine">
     <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/d%C3%A9sob%C3%A9issance-Moravia-Alberto-R%C3%A9f-35486/dp/B01MCX0HGQ/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1TPRTGBPJGTAD&keywords=la+d%C3%A9sob%C3%A9issance+moravia&qid=1654194977&sprefix=la+d%C3%A9sobeissance+moravi%2Caps%2C234&sr=8-2"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81rDAdDhLdL.jpg" alt="La désobéissance" class="books" /></a>
+      <a href="https://www.amazon.fr/D%C3%A9sob%C3%A9issance-Alberto-Moravia/dp/2070365085/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1654194977&sr=8-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61g3Aasic0L.jpg" alt="La désobéissance" class="books" /></a>
       <figcaption>
          Alberto Moravia
       </figcaption>
@@ -4901,7 +4901,7 @@
         La désobéissance
       </figcaption>
       <figcaption>
-        Rupture de stock
+        7,50
       </figcaption>
     </figure>
 
