--- a/livres.html
+++ b/livres.html
@@ -6051,35 +6051,35 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/Roi-Lear-William-Shakespeare/dp/2070468518/ref=d_pd_sim_sccl_2_2/257-0666022-3977509?pd_rd_w=bDI75&content-id=amzn1.sym.05387b9f-8f73-4bc0-a71d-6540334e26bc&pf_rd_p=05387b9f-8f73-4bc0-a71d-6540334e26bc&pf_rd_r=ZET7EQXK59NJDF41VNHA&pd_rd_wg=ct7FR&pd_rd_r=f24cb70a-31c4-4604-8fc1-56c88faf9854&pd_rd_i=2070468518&psc=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/51mJz27p9KL.jpg" alt="Le Roi Lear" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        William Shakespeare
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        Le Roi Lear
       </figcaption>
       <figcaption>
-        19,90€
+        2,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Hamlet-William-Shakespeare/dp/207046850X/ref=pd_bxgy_img_sccl_2/257-0666022-3977509?pd_rd_w=xNQaR&content-id=amzn1.sym.94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_p=94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_r=ZYV2XM6897BBJYY2FZZ9&pd_rd_wg=QrWli&pd_rd_r=6eff1dcb-8235-4e3f-bcce-73fcfa8f53b7&pd_rd_i=207046850X&psc=1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61PELf9ru0L.jpg" alt="Hamlet" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        William Shakespeare
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Hamlet
       </figcaption>
       <figcaption>
-        23,56€
+        3,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
