--- a/livres.html
+++ b/livres.html
@@ -753,7 +753,7 @@
     </figure>
 
 
-    <!--Livre 46-->
+    <!--Livre 46
     <figure>
       <a href="https://www.amazon.fr/cri-du-ventre-Enora-Malagr%C3%A9/dp/B07RX2JTCF/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1571667781&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71rANakYlqL.jpg"
           alt="Un Cri Du Ventre" class="books" /></a>
@@ -766,7 +766,7 @@
       <figcaption>
         8,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 47-->
     <figure>
