Edgar Allan Poe + Sarkozy

--- a/livres.html
+++ b/livres.html
@@ -753,21 +753,23 @@
     </figure>
 
 
-    <!--Livre 46
+    <!--Livre 46-->
     <figure>
-      <a href="https://www.amazon.fr/cri-du-ventre-Enora-Malagr%C3%A9/dp/B07RX2JTCF/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1571667781&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71rANakYlqL.jpg"
-          alt="Un Cri Du Ventre" class="books" /></a>
+      <a href="https://www.amazon.fr/crimes-rue-Morgue-autres-nouvelles/dp/2369147989/?_encoding=UTF8&pd_rd_w=badGr&content-id=amzn1.sym.b8f182d4-be82-49d2-9854-7256c7ab0049%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=b8f182d4-be82-49d2-9854-7256c7ab0049&pf_rd_r=9RVZQ7VX3876BEBWV7HY&pd_rd_wg=Bwo4k&pd_rd_r=d69bbe1b-6ade-4043-a262-c5b5f2028551&ref_=pd_gw_ci_mcx_mr_hp_atf_m" target="_blank"> <img src="https://m.media-amazon.com/images/I/9192Uj8DywL.jpg"
+          alt="Les crimes de la rue Morgue et autres nouvelles" class="books" /></a>
       <figcaption>
-        Enora Malagré
+        Edgar Allan Poe
       </figcaption>
       <figcaption>
-        Un Cri Du Ventre
+        Les crimes de la rue Morgue
       </figcaption>
       <figcaption>
-        8,00€
+        et autres nouvelles
       </figcaption>
-    </figure>-->
-
+      <figcaption>
+        11,70€
+      </figcaption>
+    </figure>
     <!--Livre 47-->
     <figure>
       <a href="https://www.amazon.fr/Carton-jaune-Nick-HORNBY/dp/2264051922/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1624447818&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/6147rvzgulL.jpg" alt="Carton jaune"
@@ -6081,20 +6083,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/temps-combats-Nicolas-Sarkozy/dp/2213726485/?_encoding=UTF8&pd_rd_w=badGr&content-id=amzn1.sym.b8f182d4-be82-49d2-9854-7256c7ab0049%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=b8f182d4-be82-49d2-9854-7256c7ab0049&pf_rd_r=9RVZQ7VX3876BEBWV7HY&pd_rd_wg=Bwo4k&pd_rd_r=d69bbe1b-6ade-4043-a262-c5b5f2028551&ref_=pd_gw_ci_mcx_mr_hp_atf_m" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71D3SMQRnOL.jpg" alt="Le temps des combats" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Nicolas Sarkozy
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Le temps des combats
       </figcaption>
       <figcaption>
-        35,00€
+        28,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
