--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="#" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/en/e/e9/F1_Manager_2023_cover_art.jpg" alt="F1 Manager" class="game" /></a>
       <figcaption>
@@ -37,7 +37,7 @@
       <figcaption>
         Achat sur PC
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2
     <figure>
