retrait grosse commande

--- a/livres.html
+++ b/livres.html
@@ -1975,7 +1975,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 117-->
+    <!--Livre 117
     <figure>
       <a href="https://www.amazon.fr/Dernier-Jour-dun-Condamn%C3%A9/dp/2072699916/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650317564&sr=8-4" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71g9ThJoDsL.jpg"
           alt="Crimes et mystères de Paris" class="books" /></a>
@@ -1991,7 +1991,7 @@
       <figcaption>
         2,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 118-->
     <figure>
@@ -2528,7 +2528,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 114-->
+    <!--Livre 114
     <figure>
       <a href="https://www.amazon.fr/Macbeth-William-Shakespeare/dp/2070468496/ref=sr_1_2?keywords=macbeth&qid=1650420879&sprefix=macbe%2Caps%2C78&sr=8-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71oEoWkj60L.jpg"
           alt="Macbeth" class="books" /></a>
@@ -2541,9 +2541,9 @@
       <figcaption>
         2,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 115-->
+    <!--Livre 115
     <figure>
       <a href="https://www.amazon.fr/Rom%C3%A9o-Juliette-William-Shakespeare/dp/2070468488/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21PRRI8ID5GJN&keywords=romeo+et+juliette+shakespeare+poche&qid=1650420909&sprefix=romeo+et+juliette+shakespeare+poche%2Caps%2C59&sr=8-4"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71ki+fKYHjL.jpg" alt="Roméo et Juliette" class="books" /></a>
@@ -2556,7 +2556,7 @@
       <figcaption>
         2,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 116-->
     <figure>
@@ -2655,7 +2655,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Premier-amour-Ivan-Tourgueniev/dp/2253012521/ref=sr_1_1?keywords=tourgueniev+premier+amour&qid=1650420495&sprefix=tougueniev+%2Caps%2C64&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71XoXH2Fs5L.jpg" alt="Premier amour" class="books" /></a>
@@ -2668,7 +2668,7 @@
       <figcaption>
         2,55€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
@@ -2785,7 +2785,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/femme-dun-autre-mari-sous/dp/2070356949/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650420634&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91AE2xzaokL.jpg"
           alt="La femme d'un autre et le mari sous le lit: Une aventure peu ordinaire" class="books" /></a>
@@ -2801,7 +2801,7 @@
       <figcaption>
         2,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
@@ -2871,7 +2871,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Portrait-Dorian-Gray-Oscar-Wilde/dp/2253002887/ref=sr_1_1?crid=3LYB4RG7N45NN&keywords=oscar+wilde+le+portrait+de+dorian+gray+le+livre+de+poche&qid=1650457856&sprefix=oscar+wilde+le+portrait+de+dorian+gray%2Caps%2C71&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81A1FUe-1JL.jpg" alt="Le Portrait de Dorian Gray" class="books" /></a>
@@ -2884,7 +2884,7 @@
       <figcaption>
         3,30€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -4792,7 +4792,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Bartleby-Herman-Melville/dp/2253005126/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2BGX0BX0ZDE85&keywords=Herman+Melville+-+Bartleby&qid=1654193231&sprefix=herman+melville+-+bartleby%2Caps%2C229&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71qZ848K-TL.jpg" alt="Bartleby" class="books" /></a>
@@ -4805,7 +4805,7 @@
       <figcaption>
         4,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -4875,7 +4875,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/badine-pas-avec-lamour/dp/2290120561/ref=sr_1_4?keywords=on+ne+badine+pas+avec+l%27amour+musset&qid=1653932595&sprefix=on+ne+badine%2Caps%2C75&sr=8-4" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61UQAZsCGqL.jpg" alt="On ne badine pas avec l’amour" class="books" /></a>
@@ -4888,7 +4888,7 @@
       <figcaption>
         2,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -6053,7 +6053,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Roi-Lear-William-Shakespeare/dp/2070468518/ref=d_pd_sim_sccl_2_2/257-0666022-3977509?pd_rd_w=bDI75&content-id=amzn1.sym.05387b9f-8f73-4bc0-a71d-6540334e26bc&pf_rd_p=05387b9f-8f73-4bc0-a71d-6540334e26bc&pf_rd_r=ZET7EQXK59NJDF41VNHA&pd_rd_wg=ct7FR&pd_rd_r=f24cb70a-31c4-4604-8fc1-56c88faf9854&pd_rd_i=2070468518&psc=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/51mJz27p9KL.jpg" alt="Le Roi Lear" class="books" /></a>
@@ -6066,7 +6066,7 @@
       <figcaption>
         2,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
