--- a/livres.html
+++ b/livres.html
@@ -1061,23 +1061,23 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 65
+    <!--Livre 65-->
     <figure>
-      <a href="https://www.amazon.fr/Quando-abbiamo-smesso-capire-mondo/dp/8845935183/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1628703680&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61siQ16nxRL.jpg"
-          alt="Quando abbiamo smesso di capire il mondo" class="books" /></a>
+      <a href="https://www.amazon.fr/Lev-Yachine-Sovi%C3%A9tique-Laurent-Lasne/dp/2918822124/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3J63ULYK9XN0N&keywords=laurent+lasne&qid=1692969854&sprefix=laurent+lasne%2Caps%2C83&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/41D6VcvfcHL.jpg"
+          alt="Lev Yachine" class="books" /></a>
       <figcaption>
-        Benjamin Labatut
+        Laurent Lasne
       </figcaption>
       <figcaption>
-        Quando abbiamo smesso
+        Lev Yachine
       </figcaption>
       <figcaption>
-        di capire il mondo
+        un Roman Soviétique
       </figcaption>
       <figcaption>
-        18,00€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 66-->
     <figure>
