--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,22 +22,22 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/en/e/e9/F1_Manager_2023_cover_art.jpg" alt="F1 Manager" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://cdn.sega.co.uk/store-fm/public/styles/640/public/content/media/image/cover/fm24_2d_packshot.jpg?itok=tvzSrgcS" alt="Football Manager 2024" class="game" /></a>
       <figcaption>
-        F1 Manager 2023
+        Football Manager 2024
       </figcaption>
       <figcaption>
-        65,00€
+        53,99€ en précommande
       </figcaption>
       <figcaption>
-        Sortie le 31 juillet 2023
+        Sortie le 6 novembre 2024
       </figcaption>
       <figcaption>
-        Achat sur PC
+        Achat via le PC
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 2
     <figure>
