--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -39,22 +39,16 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://images.g2a.com/1024x768/1x1x0/the-binding-of-isaac-rebirth-complete-bundle-repentence-dlc-pc-steam-gift-europe-i10000235499007/758da73c53d645eca0595767" alt="Isaac" class="game" /></a>
+      <a href="https://www.amazon.fr/SPORTS-Standard-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0CB6XYZHW/ref=sr_1_1?crid=122RLON41U7DB&keywords=ea+fc+24+ps5&qid=1696531120&sprefix=ea+f%2Caps%2C81&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81swenNfj-L._AC_SL1500_.jpg" alt="EA FC" class="game" /></a>
       <figcaption>
-        The Binding of Isaac
+        EA FC 24
       </figcaption>
       <figcaption>
-        The Complete Bundle
+        69,99€
       </figcaption>
-      <figcaption>
-        48,46€
-      </figcaption>
-      <figcaption>
-        Achat sur PC
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 3
     <figure>
