--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -39,7 +39,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2-->
+    <!--Jeu 2
     <figure>
       <a href="https://www.amazon.fr/SPORTS-Standard-PS5-Vid%C3%A9o-Fran%C3%A7ais/dp/B0CB6XYZHW/ref=sr_1_1?crid=122RLON41U7DB&keywords=ea+fc+24+ps5&qid=1696531120&sprefix=ea+f%2Caps%2C81&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81swenNfj-L._AC_SL1500_.jpg" alt="EA FC" class="game" /></a>
       <figcaption>
@@ -48,7 +48,7 @@
       <figcaption>
         69,99€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 3
     <figure>
