--- a/livres.html
+++ b/livres.html
@@ -6100,20 +6100,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Petits-Farceurs-Rentr%C3%A9e-litt%C3%A9raire-2023/dp/2221270568/ref=sr_1_1?crid=CJ8BKH1SNZT1&keywords=louis+henri+de+la+rochefoucauld&qid=1696684071&sprefix=louis+henri%2Caps%2C78&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61KoZo0MqPL._SL1274_.jpg" alt="Les Petits Farceurs" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Louis-Henri de La Rochefoucauld
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Les Petits Farceurs
       </figcaption>
       <figcaption>
-        17,90€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98
     <figure>
